tests/__snapshots__/validation-test-handles-nested-stderr.snap.txt
Error: 'describe()' cannot be nested within 'test()'.

  2 | 
  3 | test("is string?", () => {
  4 |   describe("nested describe is handled?", () => {
    |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  5 |     expect<number>().type.toBeNumber();
    | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  6 |   });
    | ~~~~
  7 | 
  8 |   test("nested test is handled?", () => {
  9 |     expect<never>().type.toBeNever();

      at ./__typetests__/handles-nested.tst.ts:4:3

Error: 'test()' cannot be nested within 'test()'.

   6 |   });
   7 | 
   8 |   test("nested test is handled?", () => {
     |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   9 |     expect<never>().type.toBeNever();
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  10 |   });
     | ~~~~
  11 | 
  12 |   expect<string>().type.toBeString();
  13 | });

       at ./__typetests__/handles-nested.tst.ts:8:3

